[fix] PR 반영 - #75